--- a/.github/workflows/dockerbuilddeploy.yml
+++ b/.github/workflows/dockerbuilddeploy.yml
@@ -18,12 +18,15 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Build and Push Application Image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: webapp-repo  
+          ECR_REPOSITORY: webapp-repo
           IMAGE_TAG: v0.1
+          AWS_REGION: ${{ secrets.AWS_REGION }}  
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
@@ -31,8 +34,9 @@ jobs:
       - name: Build and Push MySQL Image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: mysql-repo  
+          ECR_REPOSITORY: mysql-repo
           IMAGE_TAG: v0.1
+          AWS_REGION: ${{ secrets.AWS_REGION }}  
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile_sql .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
