--- a/.github/workflows/dockerbuilddeploy.yml
+++ b/.github/workflows/dockerbuilddeploy.yml
@@ -11,22 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-   
       - name: Check out code
         uses: actions/checkout@v2
 
+      - name: Configure AWS Credentials  
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }} 
+
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          aws-region: ${{ secrets.AWS_REGION }}
+        uses: aws-actions/amazon-ecr-login@v1 
 
       - name: Build and Push Application Image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: webapp-repo
           IMAGE_TAG: v0.1
-          AWS_REGION: ${{ secrets.AWS_REGION }}  
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
@@ -36,7 +39,6 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: mysql-repo
           IMAGE_TAG: v0.1
-          AWS_REGION: ${{ secrets.AWS_REGION }}  
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile_sql .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
