--- a/.github/workflows/dockerbuilddeploy.yml
+++ b/.github/workflows/dockerbuilddeploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build Images
+    name: Build and Push Images
     runs-on: ubuntu-latest
 
     steps:
@@ -19,11 +19,12 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }} 
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1 
+        uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build and Push Application Image
         env:
